// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / Tabs Controlled behaviour 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c4 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  box-sizing: border-box;
}

.c11 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c8 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c8::after {
  content: '';
  background-color: #336BFF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c10 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #212121;
}

.c7,
.c7[type='button'],
.c7[type='reset'],
.c7[type='submit'] {
  -webkit-appearance: button;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c9 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #6E6E6E;
}

.c9,
.c9[type='button'],
.c9[type='reset'],
.c9[type='submit'] {
  -webkit-appearance: button;
}

.c9::-moz-focus-inner,
.c9[type='button']::-moz-focus-inner,
.c9[type='reset']::-moz-focus-inner,
.c9[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c9:-moz-focusring,
.c9[type='button']:-moz-focusring,
.c9[type='reset']:-moz-focusring,
.c9[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
  list-style: none;
}

.c12 {
  height: 100%;
}

@media (min-width:760px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -8px;
    margin-right: -8px;
  }

  .c4 > * {
    padding-left: 8px;
    padding-right: 8px;
  }

  .c4 > *:not(:first-child) {
    padding-top: 0;
  }
}

<span
  className="c0"
>
  <button
    onClick={[Function]}
    type="button"
  >
    Change state outside
  </button>
  <div
    className="c1 c2"
    role="tablist"
  >
    <ul
      className="c3 c4"
      direction="row"
    >
      <li
        className="c5"
        role="presentation"
      >
        <span
          className="c6"
        >
          <button
            active={true}
            aria-selected={true}
            className="NormalizedButton__Button-sc-ey7f5x-0 c7"
            id="tabs-tab-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            <span
              className="c8"
              height={8}
            >
              One
            </span>
          </button>
        </span>
      </li>
      <li
        className="c5"
        role="presentation"
      >
        <span
          className="c0"
        >
          <button
            active={false}
            aria-selected={false}
            className="NormalizedButton__Button-sc-ey7f5x-0 c9"
            id="tabs-tab-1"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="c10"
              height={8}
            >
              Two
            </span>
          </button>
        </span>
      </li>
    </ul>
  </div>
  <div
    className="c11"
  />
  <section
    aria-labelledby="tabs-tab-0"
    className="c12"
    hidden={false}
    id="tabs-tabpanel-0"
    role="tabpanel"
  >
    Ones children
  </section>
</span>
`;

exports[`Storyshots Molecules / Tabs Default 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c4 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  box-sizing: border-box;
}

.c11 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c8 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c8::after {
  content: '';
  background-color: #336BFF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c10 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #212121;
}

.c7,
.c7[type='button'],
.c7[type='reset'],
.c7[type='submit'] {
  -webkit-appearance: button;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c9 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #6E6E6E;
}

.c9,
.c9[type='button'],
.c9[type='reset'],
.c9[type='submit'] {
  -webkit-appearance: button;
}

.c9::-moz-focus-inner,
.c9[type='button']::-moz-focus-inner,
.c9[type='reset']::-moz-focus-inner,
.c9[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c9:-moz-focusring,
.c9[type='button']:-moz-focusring,
.c9[type='reset']:-moz-focusring,
.c9[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
  list-style: none;
}

.c12 {
  height: 100%;
}

@media (min-width:760px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -8px;
    margin-right: -8px;
  }

  .c4 > * {
    padding-left: 8px;
    padding-right: 8px;
  }

  .c4 > *:not(:first-child) {
    padding-top: 0;
  }
}

<span
  className="c0"
>
  <div
    className="c1 c2"
    role="tablist"
  >
    <ul
      className="c3 c4"
      direction="row"
    >
      <li
        className="c5"
        role="presentation"
      >
        <span
          className="c6"
        >
          <button
            active={true}
            aria-selected={true}
            className="NormalizedButton__Button-sc-ey7f5x-0 c7"
            id="tabs-tab-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            <span
              className="c8"
              height={8}
            >
              One
            </span>
          </button>
        </span>
      </li>
      <li
        className="c5"
        role="presentation"
      >
        <span
          className="c0"
        >
          <button
            active={false}
            aria-selected={false}
            className="NormalizedButton__Button-sc-ey7f5x-0 c9"
            id="tabs-tab-1"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="c10"
              height={8}
            >
              <div>
                Node as well
                <span
                  aria-label="goodjob"
                  role="img"
                >
                  👍
                </span>
              </div>
            </span>
          </button>
        </span>
      </li>
    </ul>
  </div>
  <div
    className="c11"
  />
  <section
    aria-labelledby="tabs-tab-0"
    className="c12"
    hidden={false}
    id="tabs-tabpanel-0"
    role="tabpanel"
  >
    Ones children
  </section>
</span>
`;

exports[`Storyshots Molecules / Tabs Large variant 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c4 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  box-sizing: border-box;
}

.c11 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c8 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
}

.c8::after {
  content: '';
  background-color: #336BFF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c10 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #212121;
}

.c7,
.c7[type='button'],
.c7[type='reset'],
.c7[type='submit'] {
  -webkit-appearance: button;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c9 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #6E6E6E;
}

.c9,
.c9[type='button'],
.c9[type='reset'],
.c9[type='submit'] {
  -webkit-appearance: button;
}

.c9::-moz-focus-inner,
.c9[type='button']::-moz-focus-inner,
.c9[type='reset']::-moz-focus-inner,
.c9[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c9:-moz-focusring,
.c9[type='button']:-moz-focusring,
.c9[type='reset']:-moz-focusring,
.c9[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
  list-style: none;
}

.c12 {
  height: 100%;
}

@media (min-width:760px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c4 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c4 > *:not(:first-child) {
    padding-top: 0;
  }
}

<span
  className="c0"
>
  <div
    className="c1 c2"
    role="tablist"
  >
    <ul
      className="c3 c4"
      direction="row"
    >
      <li
        className="c5"
        role="presentation"
      >
        <span
          className="c6"
        >
          <button
            active={true}
            aria-selected={true}
            className="NormalizedButton__Button-sc-ey7f5x-0 c7"
            id="tabs-tab-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            <span
              className="c8"
              height={8}
            >
              One
            </span>
          </button>
        </span>
      </li>
      <li
        className="c5"
        role="presentation"
      >
        <span
          className="c0"
        >
          <button
            active={false}
            aria-selected={false}
            className="NormalizedButton__Button-sc-ey7f5x-0 c9"
            id="tabs-tab-1"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="c10"
              height={8}
            >
              <div>
                Node as well
                <span
                  aria-label="goodjob"
                  role="img"
                >
                  👍
                </span>
              </div>
            </span>
          </button>
        </span>
      </li>
    </ul>
  </div>
  <div
    className="c11"
  />
  <section
    aria-labelledby="tabs-tab-0"
    className="c12"
    hidden={false}
    id="tabs-tabpanel-0"
    role="tabpanel"
  >
    Ones children
  </section>
</span>
`;

exports[`Storyshots Molecules / Tabs With conditionally hidden tab 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c5 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
}

.c9 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c8 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #6E6E6E;
}

.c7,
.c7[type='button'],
.c7[type='reset'],
.c7[type='submit'] {
  -webkit-appearance: button;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4 {
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
  list-style: none;
}

.c3 {
  padding: 0 20px;
}

@media (min-width:760px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -8px;
    margin-right: -8px;
  }

  .c5 > * {
    padding-left: 8px;
    padding-right: 8px;
  }

  .c5 > *:not(:first-child) {
    padding-top: 0;
  }
}

<span
  className="c0"
>
  <div
    className="c1 c2 c3"
    role="tablist"
  >
    <ul
      className="c4 c5"
      direction="row"
    >
      <li
        className="c6"
        role="presentation"
      >
        <span
          className="c0"
        >
          <button
            active={false}
            aria-selected={false}
            className="NormalizedButton__Button-sc-ey7f5x-0 c7"
            id="tabs-tab-1"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="c8"
              height={8}
            >
              two
            </span>
          </button>
        </span>
      </li>
    </ul>
  </div>
  <div
    className="c9"
  />
</span>
`;

exports[`Storyshots Molecules / Tabs With custom styling (like spacing) 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c5 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
}

.c12 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c9 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c9::after {
  content: '';
  background-color: #336BFF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c11 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #212121;
}

.c8,
.c8[type='button'],
.c8[type='reset'],
.c8[type='submit'] {
  -webkit-appearance: button;
}

.c8::-moz-focus-inner,
.c8[type='button']::-moz-focus-inner,
.c8[type='reset']::-moz-focus-inner,
.c8[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c8:-moz-focusring,
.c8[type='button']:-moz-focusring,
.c8[type='reset']:-moz-focusring,
.c8[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c10 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #6E6E6E;
}

.c10,
.c10[type='button'],
.c10[type='reset'],
.c10[type='submit'] {
  -webkit-appearance: button;
}

.c10::-moz-focus-inner,
.c10[type='button']::-moz-focus-inner,
.c10[type='reset']::-moz-focus-inner,
.c10[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c10:-moz-focusring,
.c10[type='button']:-moz-focusring,
.c10[type='reset']:-moz-focusring,
.c10[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4 {
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
  list-style: none;
}

.c13 {
  height: 100%;
}

.c14 {
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 16px;
}

.c3 {
  padding: 0 20px;
}

@media (min-width:760px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -8px;
    margin-right: -8px;
  }

  .c5 > * {
    padding-left: 8px;
    padding-right: 8px;
  }

  .c5 > *:not(:first-child) {
    padding-top: 0;
  }
}

<span
  className="c0"
>
  <div
    className="c1 c2 c3"
    role="tablist"
  >
    <ul
      className="c4 c5"
      direction="row"
    >
      <li
        className="c6"
        role="presentation"
      >
        <span
          className="c7"
        >
          <button
            active={true}
            aria-selected={true}
            className="NormalizedButton__Button-sc-ey7f5x-0 c8"
            id="tabs-tab-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            <span
              className="c9"
              height={8}
            >
              One
            </span>
          </button>
        </span>
      </li>
      <li
        className="c6"
        role="presentation"
      >
        <span
          className="c0"
        >
          <button
            active={false}
            aria-selected={false}
            className="NormalizedButton__Button-sc-ey7f5x-0 c10"
            id="tabs-tab-1"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="c11"
              height={8}
            >
              two
            </span>
          </button>
        </span>
      </li>
    </ul>
  </div>
  <div
    className="c12"
  />
  <section
    aria-labelledby="tabs-tab-0"
    className="c13"
    hidden={false}
    id="tabs-tabpanel-0"
    role="tabpanel"
  >
    <div
      className="c14"
    >
      Ones children
    </div>
  </section>
</span>
`;

exports[`Storyshots Molecules / Tabs With height modified 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c4 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  box-sizing: border-box;
}

.c11 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c8 {
  height: 44px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c8::after {
  content: '';
  background-color: #336BFF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c10 {
  height: 44px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #212121;
}

.c7,
.c7[type='button'],
.c7[type='reset'],
.c7[type='submit'] {
  -webkit-appearance: button;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c9 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #6E6E6E;
}

.c9,
.c9[type='button'],
.c9[type='reset'],
.c9[type='submit'] {
  -webkit-appearance: button;
}

.c9::-moz-focus-inner,
.c9[type='button']::-moz-focus-inner,
.c9[type='reset']::-moz-focus-inner,
.c9[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c9:-moz-focusring,
.c9[type='button']:-moz-focusring,
.c9[type='reset']:-moz-focusring,
.c9[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
  list-style: none;
}

.c12 {
  height: 100%;
}

@media (min-width:760px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -8px;
    margin-right: -8px;
  }

  .c4 > * {
    padding-left: 8px;
    padding-right: 8px;
  }

  .c4 > *:not(:first-child) {
    padding-top: 0;
  }
}

<span
  className="c0"
>
  <div
    className="c1 c2"
    role="tablist"
  >
    <ul
      className="c3 c4"
      direction="row"
    >
      <li
        className="c5"
        role="presentation"
      >
        <span
          className="c6"
        >
          <button
            active={true}
            aria-selected={true}
            className="NormalizedButton__Button-sc-ey7f5x-0 c7"
            id="tabs-tab-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            <span
              className="c8"
              height={11}
            >
              One
            </span>
          </button>
        </span>
      </li>
      <li
        className="c5"
        role="presentation"
      >
        <span
          className="c0"
        >
          <button
            active={false}
            aria-selected={false}
            className="NormalizedButton__Button-sc-ey7f5x-0 c9"
            id="tabs-tab-1"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="c10"
              height={11}
            >
              two
            </span>
          </button>
        </span>
      </li>
    </ul>
  </div>
  <div
    className="c11"
  />
  <section
    aria-labelledby="tabs-tab-0"
    className="c12"
    hidden={false}
    id="tabs-tabpanel-0"
    role="tabpanel"
  >
    Ones children
  </section>
</span>
`;

exports[`Storyshots Molecules / Tabs With horizontal scroll 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c4 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  box-sizing: border-box;
}

.c11 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c8 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c8::after {
  content: '';
  background-color: #336BFF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c10 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
  overflow: auto;
  overflow-x: scroll;
  white-space: nowrap;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c2::-webkit-scrollbar {
  display: none;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #212121;
}

.c7,
.c7[type='button'],
.c7[type='reset'],
.c7[type='submit'] {
  -webkit-appearance: button;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c9 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #6E6E6E;
}

.c9,
.c9[type='button'],
.c9[type='reset'],
.c9[type='submit'] {
  -webkit-appearance: button;
}

.c9::-moz-focus-inner,
.c9[type='button']::-moz-focus-inner,
.c9[type='reset']::-moz-focus-inner,
.c9[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c9:-moz-focusring,
.c9[type='button']:-moz-focusring,
.c9[type='reset']:-moz-focusring,
.c9[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
  list-style: none;
}

.c12 {
  height: 100%;
}

.c13 {
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 16px;
}

@media (min-width:760px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -8px;
    margin-right: -8px;
  }

  .c4 > * {
    padding-left: 8px;
    padding-right: 8px;
  }

  .c4 > *:not(:first-child) {
    padding-top: 0;
  }
}

<span
  className="c0"
>
  <div
    className="c1 c2"
    role="tablist"
  >
    <ul
      className="c3 c4"
      direction="row"
    >
      <li
        className="c5"
        role="presentation"
      >
        <span
          className="c6"
        >
          <button
            active={true}
            aria-selected={true}
            className="NormalizedButton__Button-sc-ey7f5x-0 c7"
            id="tabs-tab-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            <span
              className="c8"
              height={8}
            >
              Tab One
            </span>
          </button>
        </span>
      </li>
      <li
        className="c5"
        role="presentation"
      >
        <span
          className="c0"
        >
          <button
            active={false}
            aria-selected={false}
            className="NormalizedButton__Button-sc-ey7f5x-0 c9"
            id="tabs-tab-1"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="c10"
              height={8}
            >
              Tab Two
            </span>
          </button>
        </span>
      </li>
      <li
        className="c5"
        role="presentation"
      >
        <span
          className="c0"
        >
          <button
            active={false}
            aria-selected={false}
            className="NormalizedButton__Button-sc-ey7f5x-0 c9"
            id="tabs-tab-2"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="c10"
              height={8}
            >
              Tab Three
            </span>
          </button>
        </span>
      </li>
      <li
        className="c5"
        role="presentation"
      >
        <span
          className="c0"
        >
          <button
            active={false}
            aria-selected={false}
            className="NormalizedButton__Button-sc-ey7f5x-0 c9"
            id="tabs-tab-3"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="c10"
              height={8}
            >
              Tab Four
            </span>
          </button>
        </span>
      </li>
      <li
        className="c5"
        role="presentation"
      >
        <span
          className="c0"
        >
          <button
            active={false}
            aria-selected={false}
            className="NormalizedButton__Button-sc-ey7f5x-0 c9"
            id="tabs-tab-4"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="c10"
              height={8}
            >
              Tab Five
            </span>
          </button>
        </span>
      </li>
      <li
        className="c5"
        role="presentation"
      >
        <span
          className="c0"
        >
          <button
            active={false}
            aria-selected={false}
            className="NormalizedButton__Button-sc-ey7f5x-0 c9"
            id="tabs-tab-5"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="c10"
              height={8}
            >
              Tab Six
            </span>
          </button>
        </span>
      </li>
    </ul>
  </div>
  <div
    className="c11"
  />
  <section
    aria-labelledby="tabs-tab-0"
    className="c12"
    hidden={false}
    id="tabs-tabpanel-0"
    role="tabpanel"
  >
    <div
      className="c13"
    >
      Ones children
    </div>
  </section>
</span>
`;

exports[`Storyshots Molecules / Tabs With styled tab content 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c5 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
}

.c12 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c9 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c9::after {
  content: '';
  background-color: #336BFF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c11 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #212121;
}

.c8,
.c8[type='button'],
.c8[type='reset'],
.c8[type='submit'] {
  -webkit-appearance: button;
}

.c8::-moz-focus-inner,
.c8[type='button']::-moz-focus-inner,
.c8[type='reset']::-moz-focus-inner,
.c8[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c8:-moz-focusring,
.c8[type='button']:-moz-focusring,
.c8[type='reset']:-moz-focusring,
.c8[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c10 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #6E6E6E;
}

.c10,
.c10[type='button'],
.c10[type='reset'],
.c10[type='submit'] {
  -webkit-appearance: button;
}

.c10::-moz-focus-inner,
.c10[type='button']::-moz-focus-inner,
.c10[type='reset']::-moz-focus-inner,
.c10[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c10:-moz-focusring,
.c10[type='button']:-moz-focusring,
.c10[type='reset']:-moz-focusring,
.c10[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4 {
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
  list-style: none;
}

.c14 {
  height: 100%;
}

.c3 ~ .c13 {
  height: inherit;
  background: #EBEBE8;
}

@media (min-width:760px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -8px;
    margin-right: -8px;
  }

  .c5 > * {
    padding-left: 8px;
    padding-right: 8px;
  }

  .c5 > *:not(:first-child) {
    padding-top: 0;
  }
}

<span
  className="c0"
>
  <div
    className="c1 c2 c3"
    role="tablist"
  >
    <ul
      className="c4 c5"
      direction="row"
    >
      <li
        className="c6"
        role="presentation"
      >
        <span
          className="c7"
        >
          <button
            active={true}
            aria-selected={true}
            className="NormalizedButton__Button-sc-ey7f5x-0 c8"
            id="tabs-tab-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            <span
              className="c9"
              height={8}
            >
              One
            </span>
          </button>
        </span>
      </li>
      <li
        className="c6"
        role="presentation"
      >
        <span
          className="c0"
        >
          <button
            active={false}
            aria-selected={false}
            className="NormalizedButton__Button-sc-ey7f5x-0 c10"
            id="tabs-tab-1"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="c11"
              height={8}
            >
              Two
            </span>
          </button>
        </span>
      </li>
    </ul>
  </div>
  <div
    className="c12"
  />
  <section
    aria-labelledby="tabs-tab-0"
    className="c13 c14"
    hidden={false}
    id="tabs-tabpanel-0"
    role="tabpanel"
  >
    Tab 1. Content have gray background
  </section>
</span>
`;
